Library and gradle upgrade